[tool.poetry]
name = "fast-claims"
version = "0.1.0"
description = ""
authors = ["Andreas Stuhlmüller <andreas@stuhlmueller.org>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.0.0"
openai = "^0.10.5"
spacy = "^3.1.3"
coreferee = "^1.1.0"
aiohttp = "^3.7.4"
nest-asyncio = "^1.5.1"
requests = "^2.26.0"
google-search-results = "^2.4.0"
sentence-transformers = "^2.1.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
